enable authenticated api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
       args:
         NODE_VERSION: 22.13.0
+    environment:
+      - AUTH_TOKEN=${AUTH_TOKEN:-}
     ports:
       - "3000:3000"
       - "9223:9223"
