enable auth token login

--- a/ui/.env.local.example
+++ b/ui/.env.local.example
@@ -1,4 +1,4 @@
-VITE_API_URL=http://0.0.0.0:3000
-VITE_WS_URL=ws://0.0.0.0:3000
-VITE_OPENAPI_URL=http://0.0.0.0:3000/documentation/json
+VITE_API_URL=https://steel-api.0xalice.com
+VITE_WS_URL=wss://steel-api.0xalice.com
+VITE_OPENAPI_URL=https://steel-api.0xalice.com/documentation/json
 
